Cluster/manifests/canary/nginx-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-canary
  labels:
    app: nginx-app
    version: canary
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: nginx-app
      version: canary
  template:
    metadata:
      labels:
        app: nginx-app
        version: canary
    spec:
      containers:
      - name: nginx
        image: 19980617/harness:9phxvQsXQmiBdO2fdSAUHQ
        ports:
        - containerPort: 80
