Cluster/manifests/canary/nginx-service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-stable-service
spec:
  selector:
    app: nginx-app
    version: stable
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
