Cluster/manifests/canary/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-app  # Matches both stable and canary pods
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
