Cluster/manifests/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    harness.io/direct-apply: "true" 
spec:
  selector:
    app: nginx
    version: green   # Initially routing traffic to BLUE deployment 
    harness.io/color: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
