Cluster/manifests/canary/nginx-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"  # 50% traffic to canary
spec:
  rules:
  - host: nginx.example.com  # Same as Stable Ingress
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-canary-service
            port:
              number: 80
